--- a/style.css
+++ b/style.css
@@ -209,12 +209,12 @@ header {
   }
   
   .fa-github {
-    background: #ffffff;
-    color: black;
+    background: #080808;
+    color: white;
   }
   
   .fa-instagram {
-    background: #125688;
+    background: #fa0730;
     color: white;
   }
 
